credit card class example

--- a/oop.ipynb
+++ b/oop.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OOP\n",
-    "\n",
-    "### What is OOP, and its goal?\n",
+    "# What is OOP, and its goal?\n",
     "\n",
     "The goal of OOP is tied to goals of correct functional software system; A correct software implementation must be such that it is;\n",
     "\n",
@@ -32,8 +30,9 @@
     "An abstract data type is an example an abstraction of a data structure\n",
     "\n",
     "---\n",
-    "\n",
-    "##### Abstract Data Types (ADT)\n",
+    "---\n",
+    "---|||\n",
+    "### Abstract Data Types (ADT)\n",
     "\n",
     "This is a mathematical model of a data structure that specifies;\n",
     "\n",
@@ -47,7 +46,7 @@
     "\n",
     "When a given method can be passed on the object; hence behaviour of an object in python is a stand-in for the type of that object\n",
     "\n",
-    "#### Abstract Base Class (ABC):\n",
+    "### Abstract Base Class (ABC):\n",
     "\n",
     "This is Python mechanism for supporting abstract data types. An ABC cannot be instantiated, rather it defines a common set of methods that all implementation of the abstraction must have.\n",
     "\n",
@@ -62,13 +61,17 @@
     "\n",
     "---\n",
     "\n",
+    "---\n",
+    "---\n",
+    "\n",
     "#### **Encapsulation**: \n",
     "\n",
     "This involve hiding the internal details (i.e. implementation details )of a public interface from a user.\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
+    "---\n",
+    "---\n",
+    "---|||\n",
     "## Design Patterns\n",
     "\n",
     "This describe a solution to a typical software design problem. A pattern provides general template for a solution that can be applied in many different situations.\n",
@@ -83,7 +86,7 @@
     "\n",
     "- a **result**: which describes and analyzes what the pattern produces\n",
     "\n",
-    "#### Two Categories of Design Patters;\n",
+    "### Two Categories of Design Patters;\n",
     "\n",
     "- **Algorithm Design Patterns**\n",
     "\n",
@@ -103,7 +106,357 @@
     "\t- Composition\n",
     "\t- Template\n",
     "\t- Locator\n",
-    "\t- Factory Method"
+    "\t- Factory Method\n",
+    "\n",
+    "---\n",
+    "---\n",
+    "---||||\n",
+    "\n",
+    "# Classes\n",
+    "\n",
+    "A class in python is the primary means of abstraction in OOP, such that;\n",
+    "\n",
+    "- instance of a class represents a piece of data\n",
+    "- member functions (or methods) represents the behaviours supported on/by the object\n",
+    "\n",
+    "A class also serves as a **blueprint** for its instances (i.e. how concrete objects can be created), such that **state information** for each instances is represented in the form of **attributes**; a.k.a - **fields or instance variables or data members**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A Credit Card Class\n",
+    "\n",
+    "class CreditCard:\n",
+    "  \"\"\"A consumer credit card.\"\"\"\n",
+    "  \n",
+    "  def __init__(self, customer: str, bank: str, acnt: str, limit: float) -> None:\n",
+    "    \"\"\"Creates a new credit card instance.\n",
+    "    \n",
+    "    The initial balance is zero.\n",
+    "    \n",
+    "    customer the name of the customer (e.g., 'John Bowman')\n",
+    "    \n",
+    "    bank the name of the bank (e.g., 'Access Bank')\n",
+    "    \n",
+    "    acnt the account identifier (e.g., '1234, 5678, 9123, 5678')\n",
+    "    \n",
+    "    limit credit limit (measured in naira)\n",
+    "    \"\"\"\n",
+    "    self._customer = customer\n",
+    "    self._bank = bank\n",
+    "    self._account = acnt\n",
+    "    self._limit = limit\n",
+    "    self._balance = 0\n",
+    "    \n",
+    "  def get_customer(self) -> str:\n",
+    "    \"\"\"Return name of customer\"\"\"\n",
+    "    return self._customer\n",
+    "    \n",
+    "  def get_bank(self) -> str:\n",
+    "    \"\"\"Return the bank's name\"\"\"\n",
+    "    return self._bank\n",
+    "    \n",
+    "  def get_account(self) -> str:\n",
+    "    \"\"\"Return the card identifying number (typically stored as string)\"\"\"\n",
+    "    return self._account\n",
+    "    \n",
+    "  def get_limit(self) -> float:\n",
+    "    \"\"\"Return the credit limit\"\"\"\n",
+    "    return self._limit\n",
+    "    \n",
+    "  def get_balance(self) -> float:\n",
+    "    \"\"\"Return the current balance\"\"\"\n",
+    "    return self._balance\n",
+    "    \n",
+    "  def charge(self, price: float) -> bool:\n",
+    "    \"\"\"Charge given price to the card, assuming sufficient credit limit.\n",
+    "    Return True if charge was processed; False if charge was denied.\n",
+    "    \"\"\"\n",
+    "    if price + self._balance > self._limit:\t\t# charge would exceed limit\n",
+    "      return False\t\t\t\t\t\t\t\t\t\t\t\t\t\t# cannot accept charge\n",
+    "    else:\n",
+    "      self._balance += price\n",
+    "      return True   \n",
+    "    \n",
+    "  def make_payment(self, amount: float) -> None:\n",
+    "    \"\"\"Process customer payment that reduces balance\"\"\"\n",
+    "    self._balance -= amount \n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "  wallet = []\n",
+    "  wallet.append(CreditCard( 'John Bowman', 'California Savings', '5391 0375 9387 5309' , 2500) ) \n",
+    "  wallet.append(CreditCard( 'John Bowman', 'California Federal', '3485 0399 3395 1954' , 3500) )\n",
+    "  wallet.append(CreditCard( 'John Bowman' , 'California Finance', '5391 0375 9387 5309', 5000) )\n",
+    "  \n",
+    "  for val in range(1, 17):\n",
+    "    wallet[0].charge(val)\n",
+    "    wallet[1].charge( 2 * val)\n",
+    "    wallet[2].charge( 3 * val)\n",
+    "    \n",
+    "  for c in range(3):\n",
+    "    print('Customer =' , wallet[c].get_customer())\n",
+    "    print( 'Bank =', wallet[c].get_bank())\n",
+    "    print('Account =' , wallet[c].get_account())\n",
+    "    print( 'Limit =', wallet[c].get_limit())\n",
+    "    print( 'Balance =', wallet[c].get_balance())\n",
+    "\n",
+    "    while wallet[c].get_balance( ) > 100:\n",
+    "      wallet[c].make_payment(100)\n",
+    "      print( 'New balance =', wallet[c].get_balance())\n",
+    "  print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cc = CreditCard('Mo Kolawole', 'Access Bank', '0085083650', 1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "---|||\n",
+    "\n",
+    "# Operator Overloading\n",
+    "\n",
+    "This a process where a class implements special unique method from Python built-in classes  by **overiding** their method definition.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A Vector class\n",
+    "\n",
+    "from typing import Any, Sequence\n",
+    "\n",
+    "class Vector:\n",
+    "  \"\"\"Represent a vector in multidimensional space.\"\"\"\n",
+    "  \n",
+    "  def __init__(self, d: Any) -> None:\n",
+    "    \"\"\"Create d-dimensional vectors of zeros\"\"\"\n",
+    "    self._coords = [0] * d\n",
+    "    self.type = type(d)\n",
+    "    \n",
+    "  def __len__(self):\n",
+    "    \"\"\"Return the dimension of the vector.\"\"\"\n",
+    "    return len(self._coords)\n",
+    "  \n",
+    "  def __getitem__(self, j: int):\n",
+    "    \"\"\"Return the jth coordinate of vector\"\"\"\n",
+    "    return self._coords[j]\n",
+    "  \n",
+    "  def __setitem__(self, j: int, val):\n",
+    "    \"\"\"Set jth coordinate of vector to given value.\"\"\"\n",
+    "    \n",
+    "    self._coords[j] = val\n",
+    "    \n",
+    "  def __add__(self, other):\n",
+    "    \"\"\"Return the sum of two vectors.\"\"\"\n",
+    "    \n",
+    "    if len(self) != len(other):\n",
+    "      raise ValueError('dimensions must agree')\n",
+    "    \n",
+    "    result = Vector(len(self))\n",
+    "    for j in range(len(self)):\n",
+    "      result[j] = self[j] + other[j]\n",
+    "      \n",
+    "    return result\n",
+    "  \n",
+    "  def __eq__(self, other: Sequence) -> bool:\n",
+    "    \"\"\"Return True if vector has the same coordinate as other\"\"\"\n",
+    "    return self._coords == other._coords\n",
+    "  \n",
+    "  def __ne__(self, other: Sequence) -> bool:\n",
+    "    return not self == other\n",
+    "  \n",
+    "  def __str__(self) -> str:\n",
+    "    return '<' + str(self._coords)[1:-1] + '>'\n",
+    "  \n",
+    "if __name__ == '__main__':\n",
+    "  vc = Vector(4)\n",
+    "  vc[1] = 23\n",
+    "  vc[-1] = 45\n",
+    "\n",
+    "  print(vc[3])\n",
+    "\n",
+    "  u = vc + vc\n",
+    "  print(u)\n",
+    "  \n",
+    "  total = 0\n",
+    "  for entry in vc:\n",
+    "    total += entry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "---|||\n",
+    "\n",
+    "# Iterators\n",
+    "\n",
+    "The mechanism for iteration is provided by the special **__next__** method, that returns the next element of a collection, if any, OR raises a StopIteration exception to indicate that there are no further elements.\n",
+    "\n",
+    "By default, implementing the special methods below, guarantees an automatic iterator implementation for the object, hence the **__next__** method need not be implemented once the two special methods are implemented on the class;\n",
+    "\n",
+    "- **__len__**\n",
+    "- **__getitem__**\n",
+    "\n",
+    "> By convention, an iterator must return itself in the special **__iter__** method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A low level Iterator class\n",
+    "\n",
+    "class SequenceIterator:\n",
+    "  \"\"\"An iterator for any of Python's sequence types.\"\"\"\n",
+    "  \n",
+    "  def __init__(self, sequence) -> None:\n",
+    "    \"\"\"Create an iterator for the given sequence.\"\"\"\n",
+    "    self._seq = sequence\t\t\t\t\t# keep a reference to  the underlying data\n",
+    "    self._k = -1 \t\t\t\t\t\t\t\t\t# will increment to 0 on first call to next\n",
+    "  \n",
+    "  def __next__(self):\n",
+    "    \"\"\"Return the next element, or raise StopIteration error.\"\"\"\n",
+    "    self._k +=1\t\t\t\t\t\t\t\t# advance to the next\n",
+    "    if self._k < len(self._seq):\n",
+    "      return self._seq[self._k] \t\t\t\t\t# return the data element\n",
+    "    else:\n",
+    "      raise StopIteration()\n",
+    "    \n",
+    "  def __iter__(self):\n",
+    "    \"\"\"By convention, an iterator must return itself as an iterator\"\"\"\n",
+    "    return self"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The range class\n",
+    "\n",
+    "from typing import Any\n",
+    "\n",
+    "\n",
+    "class Range:\n",
+    "  \"\"\"A class that mimics the built-in range class\"\"\"\n",
+    "  \n",
+    "  def __init__(self, start, stop=None, step=1) -> None:\n",
+    "    \"\"\"Initialize a Range instance.\n",
+    "    \n",
+    "    Semantics is similar to built-in range class. \n",
+    "    \"\"\" \n",
+    "    if step == 0:\n",
+    "      raise ValueError('step cannot be zero')\n",
+    "    \n",
+    "    if stop is None:\n",
+    "      start, stop = 0, start \t\t\t\t\t# special case of range(n)\n",
+    "    \n",
+    "    # calculate effective length\n",
+    "    self._length = max(0, (stop - start + step - 1) // step)\n",
+    "    \n",
+    "    self._start = start\n",
+    "    self._step = step\n",
+    "    \n",
+    "  def __len__(self):\n",
+    "    \"\"\"Return the number of entries in the range.\"\"\"\n",
+    "    return self._length\n",
+    "    \n",
+    "  def __getitem__(self, k):\n",
+    "    \"\"\"Return entry at index k (using standard interpretation if negatives).\"\"\"\n",
+    "    if k < 0:\n",
+    "      k += len(self)\n",
+    "    if not 0 <= k < self._length:\n",
+    "      raise IndexError('index out of range')\n",
+    "      \n",
+    "    return self._start + k * self._step\n",
+    "  \n",
+    "if __name__ == '__main__':\n",
+    "  r = Range(1000, step=5)\n",
+    "  print(list(r).__len__())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "---|||\n",
+    "\n",
+    "# Inheritance\n",
+    "\n",
+    "Python's inheritance provides an hierarchical structure between classes; where one class **inherits** properties from the other on an **is a kind of** basis;\n",
+    "\n",
+    "e.g.\n",
+    "If A, and B are two classes, and A inherits the properties of B, then A **is a kind** of B. Infact, we go on to say that A *is* B, because of duck-typing. Remember, behaviour acts as types in Python, so anywhere we can put A, so can we put B\n",
+    "\n",
+    "In general, since **A** inherits from **B**, we say **A is a *subclass (or child class)* of B** AND **B is a *super-class (or parent ( or base ) class)* of A**  \n",
+    "\n",
+    "> **In general, inheritance allows us to organize common functions at the super-class level, and only overide/extend these functions (behaviours) at the subclass(es) level**\n",
+    "\n",
+    "- When it overides: it specialise the base class functionality\n",
+    "\n",
+    "- When it extends: it adds new functionality to the base class' by providing new methods\n",
+    "---\n",
+    "\n",
+    "At the file level, modularity is provided by python modules, at the class level, the mechanism for modularity and hierarchical organization is through inheritance. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extend the Credit Card class\n",
+    "\n",
+    "class PredatoryCreditCard(CreditCard):\n",
+    "  \"\"\"A subclass of Credit Card class that adds new functionality\n",
+    "  \n",
+    "  Deducts a $5 for every attempted charge when credit limit is exceeded\n",
+    "  \n",
+    "  Adds a new method that charges a monthly interest on outstanding balance\n",
+    "  \"\"\"\n",
+    "  \n",
+    "  def __init__(self, customer: str, bank: str, acnt: str, limit: float, apr=5) -> None:\n",
+    "    super().__init__(customer, bank, acnt, limit)\n",
+    "    self._apr = apr \n",
+    "    \n",
+    "  def process_month(self):\n",
+    "    \"\"\"Assess monthly interest on outstanding balance,\"\"\"\n",
+    "    apr = self._apr\n",
+    "    # if positive balance, convert the APR to a monthly multiplicative factor\n",
+    "    if self._balance > 0:\n",
+    "      monthly_factor = pow(1 + self._apr, 1/12)\n",
+    "      self._balance *= monthly_factor  \n",
+    "  \n",
+    "  def charge(self, price):\n",
+    "    \"\"\"Charge the given price to the card, assuming sufficient credit limit\"\"\"\n",
+    "    success = super().ch\n",
+    "    "
    ]
   }
  ],
@@ -114,7 +467,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   }
  },
